[FIX] web, web_editor: fix text color of modals if dark body background
Before this commit, if the text color of the body was light (e.g., due
to a dark body background), the text in certain modals (for example, in
the "Alternative products" modal displayed when adding a product to a
cart on a product page) was also light, making it not visible on the
white modal background.

Steps to reproduce the bug:
- Install the e-commerce on your website.
- In Settings, enable the "Optional Products" option.
- Go to the "Customizable Desk" product page.
- Click on "Edit" to go in edit mode.
- Click on the "Theme" tab.
- Click on the 4th color of the theme colors and choose "black".
- Save the page to leave edit mode.
- Click on the "Add to cart" button.
- Bug: The text in the the modal is not visible because both text and
background are white.

After this commit, we now verify that there is sufficient contrast
between the text color of the body and the background color of the
modals. If this condition is not met, we apply an alternative color
("$yiq-text-dark" or "$yiq-text-light") to the text of the modal to
ensure visibility.

opw-3570774

--- a/addons/web/static/src/legacy/scss/bootstrap_review.scss
+++ b/addons/web/static/src/legacy/scss/bootstrap_review.scss
@@ -198,3 +198,29 @@ $o-navbar-nav-pills-link-border-radius: $nav-pills-border-radius !default;
 .carousel-control-next .sr-only {
     left: 50%; // Avoid horizontal scrollbar in Chrome
 }
+
+// Modal
+.modal-content {
+    // If the text color of the body (used for the text color in modals) is not
+    // visible due to insufficient contrast with the modal background, we adjust
+    // the text color in the modal using the following code. For example, if the
+    // user sets a black background for its website and the text color of the
+    // body is white, the text will not be visible on modals with a white
+    // background.
+
+    // Check if the body text color is light.
+    $-is-body-text-light: color-yiq($body-color) == $yiq-text-dark;
+
+    @if $modal-content-color == null {
+        color: if(
+            $-is-body-text-light,
+            color-yiq($modal-content-bg, $light: $body-color, $dark: $yiq-text-dark),
+            color-yiq($modal-content-bg, $light: $yiq-text-light, $dark: $body-color)
+        );
+    }
+    @if $-is-body-text-light {
+        .text-muted {
+            color: color-yiq($modal-content-bg, $light: $text-muted, $dark: mute-color($yiq-text-dark)) !important;
+        }
+    }
+}
