--- a/addons/web_editor/static/src/scss/web_editor.variables.scss
+++ b/addons/web_editor/static/src/scss/web_editor.variables.scss
@@ -310,6 +310,7 @@ $o-we-technical-modal-zindex: 2001;
     .modal-content {
         border-radius: 0;
         background-color: white;
+        color: #33363e;
 
         .modal-header {
             border-bottom-color: #e9ecef;
